<resources>
    <string name="app_name">PruebaJavier-Nicolás</string>
    <string name="ingrese_bpm">Ingrese BPM</string>
    <string name="saludlife">SaludLife</string>
    <string name="ingrese">Ingrese %</string>
    <string name="l_mite_superior_ingrese">Límite Superior (Ingrese %)</string>
    <string name="l_mite_superior_ingrese_bpm">Límite Superior (Ingrese BPM)</string>
    <string name="ingrese_bpm1">Ingrese BPM</string>
    <string name="l_mite_inferior_ingrese">Límite Inferior (Ingrese %)</string>
    <string name="saturaci_n_de_ox_geno">Saturación de Oxígeno</string>
    <string name="saludlife1">SaludLife</string>
    <string name="l_mite">Límite Inferior (Ingrese BPM)</string>
    <string name="parametro_monitoreo">Parámetro de monitoreo</string>
    <string name="limite_inferior_bpm">Límite Inferior (Ingrese BPM)</string>
    <string name="limite_superior_bpm">Límite Superior (Ingrese BPM)</string>
    <string name="limite_inferior_ingrese">Límite Inferior (Ingrese)</string>
    <string name="limite_superior_ingrese">Límite Superior (Ingrese)</string>
    <string name="agregar_parametros">Agregar Parámetros</string>
    <string name="ingrese_porcentaje">Ingrese %</string>
    <string name="todo">TODO</string>
    <string name="voler">voler</string>
    <string name="instrucciones">Instrucciones</string>
    <string name="list1">• Toca el sensor para comenzar el monitoreo de tu frecuencia cardíaca y saturación de oxígeno. Asegúrate de que el sensor esté en contacto con tu piel para obtener lecturas precisas.</string>
    <string name="list2">• Accede a la sección de Historial para seguir tus tendencias a lo largo del tiempo. Aquí podrás visualizar gráficos y estadísticas de tu salud.</string>
    <string name="list3">• Dirígete a la sección de Alertas para ajustar las notificaciones. Puedes recibir alertas si tus niveles de frecuencia cardíaca o saturación de oxígeno están fuera de rango.</string>
    <string name="list4">• Asegúrate de que el sensor esté limpio y libre de obstrucciones para garantizar lecturas precisas. Limpia el sensor con un paño suave si es necesario.</string>
    <string name="list5">• Recuerda que este sistema no reemplaza la consulta médica. Si experimentas síntomas preocupantes, consulta a un profesional de la salud.</string>
    <string name="saturacion">Saturación de Oxígeno</string>
    <string name="_95">95%</string>
    <string name="frecuencia">Frecuencia Cardiaca</string>
    <string name="_75_bpm">75 bpm</string>
    <string name="obtener">Obtener Información</string>
    <string name="hoy_">Hoy-Sábado</string>
    <string name="ayer">Ayer-Viernes</string>
    <string name="_08_00_am">08:00 AM</string>
    <string name="frecuencia_70">Frecuencia: 70</string>
    <string name="saturaci_n_97">Saturación: 97</string>
    <string name="_10_00_am">10:00 AM</string>
    <string name="frecuencia_75">Frecuencia: 75</string>
    <string name="saturaci_n_98">Saturación: 98</string>
    <string name="_12_00_pm">12:00 PM</string>
    <string name="frecuencia_72">Frecuencia: 72</string>
    <string name="saturaci_n_96">Saturación: 96</string>
    <string name="_02_00_pm">02:00 PM</string>
    <string name="frecuencia_74">Frecuencia: 74</string>
    <string name="_04_00_pm">04:00 PM</string>
    <string name="frecuencia_76">Frecuencia: 76</string>
    <string name="saturation_99">Saturation: 99</string>
    <string name="volver">Volver</string>

</resources>