<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/medicina"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="385dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/rosa_pastel"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/saludlife"
            android:textColor="@color/negro"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/tvLogo"
            android:layout_width="49dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/todo"
            android:src="@drawable/user" />
    </LinearLayout>

    <Button
        android:id="@+id/btnInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instrucciones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <ScrollView
        android:id="@+id/scrollInstructions"
        android:layout_width="362dp"
        android:layout_height="510dp"
        android:layout_margin="16dp"
        android:background="#FFF7D6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnInstructions"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/list1"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/list2"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/list3"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/list4"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list5"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/botonVolver"
        android:layout_width="98dp"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="664dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/voler"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
