<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/medicina"
    android:gravity="top">

    <!-- Barra superior con título y botón de usuario -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/rosa_pastel"
        android:padding="8dp">

        <!-- Título de la aplicación (saludlife) -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_weight="1"
            android:text="@string/saludlife"
            android:textColor="@color/negro"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Botón de imagen (logo de usuario) -->
        <ImageButton
            android:id="@+id/tvLogo"
            android:layout_width="49dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/todo"
            android:src="@drawable/user" />

    </LinearLayout>

    <!-- CardView que muestra información sobre saturación -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:background="@color/blanco">

        <!-- Contenido dentro de la CardView de saturación -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center">

            <!-- Título de la saturación -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturacion"
                android:textSize="18sp"
                android:textColor="@color/negro"/>

            <!-- Valor de saturación -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_95"
                android:textSize="16sp"
                android:textColor="@color/azul_bebe"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- CardView que muestra información sobre la frecuencia -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:background="@color/blanco">

        <!-- Contenido dentro de la CardView de frecuencia -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center">

            <!-- Título de la frecuencia -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frecuencia"
                android:textSize="18sp"
                android:textColor="@color/negro"/>

            <!-- Valor de frecuencia -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_75_bpm"
                android:textSize="16sp"
                android:textColor="@color/azul_bebe"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Botón para obtener más información -->
    <Button
        android:id="@+id/btnInstructions"
        android:layout_width="315dp"
        android:layout_height="76dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/obtener" />

    <!-- Botón de imagen para volver -->
    <ImageButton
        android:id="@+id/botonVolver"
        android:layout_width="126dp"
        android:layout_height="170dp"
        android:layout_gravity="center"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/voler"
        android:src="@drawable/back" />

</LinearLayout>
