<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/medicina"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Header and other content -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:background="@color/rosa_pastel"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/saludlife"
                android:textColor="@color/negro"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/tvLogo"
                android:layout_width="49dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/todo"
                android:src="@drawable/user" />
        </LinearLayout>

        <!-- Parametro monitores and EditText fields -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parametro_monitoreo"
            android:textSize="18sp"
            android:textColor="@color/coral_claro"
            android:layout_marginTop="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limite_inferior_bpm"
            android:layout_marginTop="8dp"
            android:textColor="@color/negro"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/dato1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/ingrese_bpm"
            android:inputType="number"
            android:background="@color/lavanda"
            android:textColor="@color/negro"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limite_superior_bpm"
            android:layout_marginTop="15dp"
            android:textColor="@color/negro"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/dato2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/ingrese_bpm"
            android:inputType="number"
            android:background="@color/lavanda"
            android:textColor="@color/negro"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limite_inferior_ingrese"
            android:layout_marginTop="8dp"
            android:textColor="@color/negro"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/dato3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/ingrese"
            android:inputType="number"
            android:background="@color/lavanda"
            android:textColor="@color/negro"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limite_superior_ingrese"
            android:layout_marginTop="8dp"
            android:textColor="@color/negro"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/dato4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/ingrese_porcentaje"
            android:inputType="number"
            android:background="@color/lavanda"
            android:textColor="@color/negro"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/buttonProcesar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agregar_parametros"
            android:layout_marginTop="16dp"
            android:layout_gravity="center" />

        <!-- Bottom Navigation Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:background="@color/amarillo_suave"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageButton
                android:id="@+id/guia"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:src="@drawable/guide"
                android:background="?attr/selectableItemBackgroundBorderless" />

            <ImageButton
                android:id="@+id/home"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:src="@drawable/home"
                android:background="?attr/selectableItemBackgroundBorderless" />

            <ImageButton
                android:id="@+id/stats"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:src="@drawable/stats"
                android:background="?attr/selectableItemBackgroundBorderless" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
